Control gcopts from model. Default is now g1gc for hosted && (!prod || region=us-east-3)